// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectStatsFilters /> should render 3 filters 1`] = `
<Row
  bsClass="row"
  className="stats__filters"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      errors={null}
      id="stats-filter-themes"
      image={null}
      labelClassName="h5"
      medias={Array []}
      onChange={[Function]}
      type="select"
    >
      <option
        value="0"
      >
        <FormattedMessage
          id="global.select_themes"
          values={Object {}}
        />
      </option>
      <option
        value={1}
      >
        theme-1
      </option>
    </InjectIntl(ReactBootstrapInput)>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      errors={null}
      id="stats-filter-categories"
      image={null}
      labelClassName="h5"
      medias={Array []}
      onChange={[Function]}
      type="select"
    >
      <option
        value="0"
      >
        <FormattedMessage
          id="global.select_categories"
          values={Object {}}
        />
      </option>
      <option
        value={1}
      />
    </InjectIntl(ReactBootstrapInput)>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={4}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      errors={null}
      id="stats-filter-districts"
      image={null}
      labelClassName="h5"
      medias={Array []}
      onChange={[Function]}
      type="select"
    >
      <option
        value="0"
      >
        <FormattedMessage
          id="global.select_districts"
          values={Object {}}
        />
      </option>
      <option
        value={1}
      />
    </InjectIntl(ReactBootstrapInput)>
  </Col>
</Row>
`;

exports[`<ProjectStatsFilters /> should render only categories filter 1`] = `
<Row
  bsClass="row"
  className="stats__filters"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={12}
    xs={12}
  >
    <InjectIntl(ReactBootstrapInput)
      errors={null}
      id="stats-filter-categories"
      image={null}
      labelClassName="h5"
      medias={Array []}
      onChange={[Function]}
      type="select"
    >
      <option
        value="0"
      >
        <FormattedMessage
          id="global.select_categories"
          values={Object {}}
        />
      </option>
      <option
        value={1}
      />
    </InjectIntl(ReactBootstrapInput)>
  </Col>
</Row>
`;
